--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "build": "^0.1.4",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-resource": "^1.5.1",
